@@ -1,3 +1,9 @@
+2012-04-11         Andrew J. Schorr     <aschorr@telemetry-investments.com>
+
+	* filefuncs.c (array_set): New function to set an array element.
+	(do_set): Use new array_set function to reduce code duplication and
+	to make sure the memory management is handled properly.
+
 2012-04-07         Andrew J. Schorr     <aschorr@telemetry-investments.com>
 
 	* filefuncs.c: Remove unnecessary #include <sys/sysmacros.h>.
